- Added: Availability check for products
- Improved: Better Isotope module handling, including callback support
- Improved: Moved multilingual support to its own extension "isotope_multilingual" with lot more options
- Improved: Hide payment information if checkout total is 0

Version 0.2.rc1
------------------------------
- Improved: Replace InsertTags in ##cart_text## and ##cart_html## templates
- Improved: Only show price for payment and shipping module if greater 0
- Improved: Hide "Default address" checkboxes for guests
- Fixed: FE_USER_LOGGED_IN might be true but no user available (Ticket #213)
- Fixed: Email language was not correctly detected under certain circumstances
- Fixed: Potential database caching issue in ePay payment modules
- Fixed: images did not change on ajax update
- Fixed: added default palette for checkout module if no checkout method (guest/member) is selected
- Fixed: tax total was not rounded according to store config
- Fixed: PayPal Standard payment charges included taxes twice
- Fixed: Missing argument 2 for IsotopeRules::findCoupon()
- Fixed various issues with PayPal sandbox processing

Version 0.2.beta2 (2010-09-27)
------------------------------
- Added: New "link target" field and help wizard to media manager
- Added: IsotopeGallery now supports link targets and "rel" attributes
- Added: Support for 13 more currencies in ePay Standard payment module
- Added: New payment module for ePay in-shop payment processing
- Added: CSS class even/odd for product list
- Added: Define custom image sizes using a wizard
- Added: Watermark option for all images
- Added: Addresses are added to address book on checkout (enable in checkout module) (Ticket #24)
- Added: Abstract class ContentIsotope to build content elements
- Added: Frontend modules now support theme templates
- Added: Cybersource payment gateway
- Improved: Downloads can now be added to product variants (Ticket #116)