@@ -61,8 +61,8 @@ $GLOBALS['TL_DCA']['tl_iso_tax_class'] = array
 		),
 		'label' => array
 		(
-			'fields'                  => array('name'),
-			'format'                  => '%s'
+			'fields'                  => array('name', 'fallback'),
+			'format'                  => '%s <span style="color:#b3b3b3; padding-left:3px;">[%s]</span>'
 		),
 		'global_operations' => array
 		(
@@ -121,7 +121,7 @@ $GLOBALS['TL_DCA']['tl_iso_tax_class'] = array
 	// Palettes
 	'palettes' => array
 	(
-		'default'                     => '{name_legend},name;{rate_legend:hide},includes,label,rates',
+		'default'                     => '{name_legend},name,fallback;{rate_legend},includes,label,rates',
 	),
 
 	// Fields
@@ -132,7 +132,14 @@ $GLOBALS['TL_DCA']['tl_iso_tax_class'] = array
 			'label'                   => &$GLOBALS['TL_LANG']['tl_iso_tax_class']['name'],
 			'search'                  => true,
 			'inputType'               => 'text',
-			'eval'                    => array('maxlength'=>255, 'mandatory'=>true, 'tl_class'=>'long'),
+			'eval'                    => array('maxlength'=>255, 'mandatory'=>true, 'tl_class'=>'w50'),
+		),
+		'fallback' => array
+		(
+			'label'					=> &$GLOBALS['TL_LANG']['tl_iso_tax_class']['fallback'],
+			'exclude'				=> true,
+			'inputType'				=> 'checkbox',
+			'eval'					=> array('fallback'=>true, 'tl_class'=>'w50 m12'),
 		),
 		'includes' => array
 		(
